# dm-GrainDelay

./: .gitignore  Cargo.toml  Dockerfile  FUNDING.yml  LICENSE  README.md  arm-linux-gnueabihf-gcc  build-lv2.sh  build.sh
.cargo/: config.toml
.github/workflows/: build.yml  dm-graindelay.mk  modduo.yml  moddwarf.yml  readme-Mod.txt  readme-ModDesktop.txt  rust.yml
dm-GrainDelay.lv2/: dm-GrainDelay_dsp.ttl  manifest.ttl  modgui.ttl
dm-Octaver.lv2/: dm-Octaver_dsp.ttl  manifest.ttl  modgui.ttl
docker/modduo/: Dockerfile
docker/moddwarf/: Dockerfile
grain_delay/: Cargo.toml  build.rs
grain_delay/src/: dc_block.rs  delay_line.rs  delta.rs  float_ext.rs  grain.rs  grain_delay.rs  grains.rs  lib.rs  lowpass.rs  mix.rs  one_pole_filter.rs  one_pole_filter_stereo.rs  pan.rs  param_filter.rs  params.rs  phasor.rs  pulse_train.rs  ramp.rs  variable_delay.rs  variable_delay_line.rs
grain_delay/src/grain/: ramp.rs
lv2/: Cargo.toml  README.md  build.sh
lv2/dm-GrainDelay.lv2/: dm-GrainDelay_dsp.ttl  manifest.ttl  modgui.ttl
lv2/dm-GrainDelay.lv2/modgui/: icon-dm-graindelay.html  stylesheet-dm-graindelay.css
lv2/docker/modduo/: Dockerfile
lv2/docker/moddwarf/: Dockerfile
lv2/src/: lib.rs
profiling/: Cargo.toml
profiling/benches/: grain_delay_bench.rs
profiling/src/: main.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-lv2-for-mod.sh  build-vst-for-mac-m1.sh  build-vst-for-mac.sh  build-vst.sh  get-package-name.sh
src/: dbtoa.rs  delta.rs  lib.rs  noise_gate.rs  slide.rs
src/graindelay/: clip.rs  delay_line.rs  grain_delay.rs  lowpass.rs  phasor.rs
src/octaver/: delta.rs  lowpass.rs  mix.rs  mod.rs  noise_gate.rs  octaver.rs  slide.rs
vst/: Cargo.toml  README.md
vst/dm-GrainDelay.vst/Contents/: Info.plist
vst/dm-GrainDelay.vst/Contents/MacOS/: dm-GrainDelay
vst/src/: grain_delay_parameters.rs  lib.rs
(+14 files in other folders)
