[package]
name = "dm_graindelay"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2 = { version = "0.6.0", features = ["minimal_plugin"] }
grain_delay = { path = "../grain_delay" }

[lib]
crate-type = ["cdylib"]
