[package]
name = "dm_graindelay"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
grain_delay = { path = "../grain_delay" }

[lib]
crate-type = ["cdylib"]
